--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Jaffar-Hussein/Star_Language_Institute#readme",
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "tailwindcss": "^3.1.8"
   }
 }
